--- a/pages/pasteles.html
+++ b/pages/pasteles.html
@@ -29,11 +29,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pasteles.html">Pasteles</a>
-                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Pedido</a>
+                    <a class="nav-link" href="#">Pasteles</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="pedido.html">Pedido</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -47,24 +47,9 @@
     <!-- container -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="display-4">Formulario</h1>
+            <h1 class="display-4">Pasteles</h1>
             <p class="lead">
-                <form>
-                    <div class="form-group">
-                      <label for="exampleInputEmail1">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleInputPassword1">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <div class="form-group form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </form>
+               Lorem ipsum dolor sit amet consectetur.
             </p>
         </div>
     </div>
