--- a/pages/pasteles.html
+++ b/pages/pasteles.html
@@ -37,8 +37,7 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pastelero</button>
             </form>
         </div>
     </nav>
@@ -49,7 +48,7 @@
         <div class="container">
             <h1 class="display-4">Pasteles</h1>
             <hr>
-            <h2>Sabores de pasteles</h2>
+            <h2 class="h2">Sabores de pasteles</h2>
             <p class="lead">
             <div class="row row-cols-1 row-cols-md-3">
                 <div class="col mb-4">
