--- a/pages/pedido.html
+++ b/pages/pedido.html
@@ -51,24 +51,43 @@
             <p class="lead">
                 <form>
                     <div class="form-group">
-                      <label for="exampleInputEmail1">Email address</label>
+                      <label for="exampleInputEmail1">Correo Electrónico</label>
                       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                      <small id="emailHelp" class="form-text text-muted">A Este correo se le mandara la confirmacion del pedido.</small>
+                    </div>
+                    <div class="form-row">
+                        <div class="col">
+                          <input type="text" class="form-control" placeholder="Nombre">
+                        </div>
+                        <div class="col">
+                          <input type="text" class="form-control" placeholder="Apellido">
+                        </div>
+                      </div>
+                    <div class="mt-2 form-group">
+                        <label for="exampleInputPassword1">Teléfono</label>
+                        <input type="number" class="form-control" placeholder="5512345678" name="" id="">
                     </div>
                     <div class="form-group">
-                      <label for="exampleInputPassword1">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1">
-                    </div>
-                    <div class="form-group form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </form>
+                        <label for="exampleFormControlTextarea1">Descripción general del pastel</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Sabores y adornos</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Indica que adornos y la cantidad, ademas de el o los sabores"></textarea>
+                      </div>
+                    <button type="submit" class="btn btn-outline-success">Enviar</button>
+                </form>
             </p>
         </div>
     </div>
     <!-- container -->
+
+    <!-- * El formulario debe de contener los datos de contacto del cliente que son 
+        * Nombre, 
+        *Teléfono, 
+        *Correo Electrónico, 
+        *Descripción general del pastel y 
+        *la selección de sabores y adornos. -->
 
     <!-- footer -->
     <footer class="text-center text-white" style="background-color: #9AA2E6;">
