--- a/pages/pastelero.html
+++ b/pages/pastelero.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <title>Pasteleria Jasmín</title>
 </head>
 
@@ -16,7 +16,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="assets/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="../assets/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
             Jasmín
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -25,20 +25,9 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/pasteles.html">Pasteles</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="pages/pedido.html">Pedido</a>
-                </li>
-            </ul>
             <form class="form-inline my-2 my-lg-0">
-                <a class="btn btn-outline-secondary" href="pages/pastelero.html" role="button">
-                    Pastelero
+                <a class="btn btn-outline-secondary" href="../index.html" role="button">
+                    Pasteleria
                 </a>
             </form>
         </div>
@@ -47,9 +36,10 @@
     
     <div class="jumbotron m-3">
         <h1 class="display-3 text-center">
-            Pastelería Jasmín
+            Pastelero ...
         </h1>
         <p class="lead">
+            <h2>Acerca de mi ...</h2>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores amet quod maxime? 
             Praesentium eos, minima, ipsa obcaecati unde voluptas excepturi quibusdam voluptatem 
             vitae facilis necessitatibus culpa, illum doloribus! Praesentium, autem!. Lorem ipsum 
@@ -63,12 +53,9 @@
         <hr class="my-4">
         <p>
             <div class="text-center">
-                <img src="assets/img/pastel.png" class="img-fluid rounded" alt="">
+                <img src="../assets/img/chef.png" class="img-fluid rounded" alt="">
             </div>
         </p>
-        <a class="btn btn-outline-secondary btn-lg btn-block" href="pages/pedido.html" role="button">
-            Pide tu pastel aquí
-        </a>
     </div>
 
 
